# huffman

./: CMakeLists.txt  README.md  TODO.md  config.h  main.cpp
benchmarks/: README.md  run.sh  run_all.sh
benchmarks/generators/: english.py  gen.py  main.py  phrases.py  streamers.py  synthetic.py
benchmarks/processor/: dmidecode.txt  lscpu.txt  proc_version.txt
benchmarks/procinfo/: proc_cpuinfo.txt
lib/: CMakeLists.txt  bitcode.cpp  bitcode.h  coding.cpp  coding.h  coding_buffers.h  encode_deque.cpp  encode_deque.h
src/: CMakeLists.txt  config.h
src/utility/: coding_buffers.h  main.cpp  utility.cpp  utility.h
src/utils/: utils.cpp  utils.h
tests/: CMakeLists.txt  main.cpp
utility/: compress.cpp  decompress.cpp  defs.h  main.cpp  utility.cpp  utility.h
utils/: defs.h  execution.h  file.h  types.h  utils.cpp
